--- a/projects/3D_Emergency.html
+++ b/projects/3D_Emergency.html
@@ -44,6 +44,7 @@
       </div>
     </nav>
 
+    <main role="main">
     <div class="jumbotron project-jumbotron">
       <div class = "container">
         <div class = "row">
@@ -242,6 +243,7 @@
       </div>
 
     </div>
+    </main>
 
     <footer>
       <div class="container">
