--- a/projects/MSGC_Consulting.html
+++ b/projects/MSGC_Consulting.html
@@ -44,6 +44,7 @@
       </div>
     </nav>
 
+    <main role="main">
     <div class="jumbotron project-jumbotron">
       <div class = "container">
         <div class = "row">
@@ -100,6 +101,7 @@
       </div>
 
     </div>
+    </main>
 
     <footer>
       <div class="container">
