--- a/About.html
+++ b/About.html
@@ -54,7 +54,7 @@
 
           </div>
           <div class = "col-sm-6">
-            <img src = "assets/Picture of me.jpg" style = "width:80%; image-orientation:from-image;">
+            <img src = "assets/Picture of me.jpg" style = "width:80%">
           </div>
         </div>
       </div>
