--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class = "container">
         <div class = "row">
           <div class = "col-md-6 col-sm-12">
-            <div class = "thumbnail">
+            <div class = "thumbnail project-card">
               <a href = "projects/3D_Emergency.html">
                 <img src = "assets/Centered Logo.png" alt = "3D Emergency" style = "width:100%; height:auto">
                 <div class = "caption">
@@ -70,9 +70,9 @@
             </div>
           </div>
           <div class = "col-md-6 col-sm-12">
-            <div class = "thumbnail">
+            <div class = "thumbnail project-card">
               <a href = "projects/MSGC_Consulting.html">
-                <img src = "assets/MSGC Consulting/Creating 1.jpg" alt = "MSGC Consulting" style = "width:100%; height:auto">
+                <img src = "assets/Thumbnails/MSGC.jpg" alt = "MSGC Consulting" style = "width:100%; height:auto">
                 <div class = "caption">
                   <p class="project-name">Consulting with the MSGC</p>
                   <p class="project-type">User Research</p>
@@ -85,7 +85,7 @@
       <div class="container">
         <div class="row">
           <div class = "col-md-6 col-sm-12">
-            <div class = "thumbnail">
+            <div class = "thumbnail project-card">
               <a href = "projects/Exercise_Visualizations.html">
                 <img src = "assets/Exercise Visualizations/sankeyNetwork.png" alt = "Sankey Diagram" style = "width:100%; height:auto">
                 <div class = "caption">
