Moving thumbnails into cards for projects

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 
       <div class = "container">
         <div class = "row">
-          <div class = "col-md-6 col-sm-12">
-            <div class = "thumbnail project-card">
+          <div class = "col-md-6 col-sm-12 ">
+            <div class = "thumbnail project-card mx-auto">
               <a href = "projects/3D_Emergency.html">
                 <img src = "assets/Centered Logo.png" alt = "3D Emergency" style = "width:100%; height:auto">
                 <div class = "caption">
@@ -70,7 +70,7 @@
             </div>
           </div>
           <div class = "col-md-6 col-sm-12">
-            <div class = "thumbnail project-card">
+            <div class = "thumbnail project-card mx-auto">
               <a href = "projects/MSGC_Consulting.html">
                 <img src = "assets/Thumbnails/MSGC.jpg" alt = "MSGC Consulting" style = "width:100%; height:auto">
                 <div class = "caption">
@@ -85,7 +85,7 @@
       <div class="container">
         <div class="row">
           <div class = "col-md-6 col-sm-12">
-            <div class = "thumbnail project-card">
+            <div class = "thumbnail project-card mx-auto">
               <a href = "projects/Exercise_Visualizations.html">
                 <img src = "assets/Exercise Visualizations/sankeyNetwork.png" alt = "Sankey Diagram" style = "width:100%; height:auto">
                 <div class = "caption">
