workout viz thumbnail is now a square

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <div class = "col-md-6 col-sm-12">
             <div class = "thumbnail project-card mx-auto">
               <a href = "projects/Exercise_Visualizations.html">
-                <img src = "assets/Exercise Visualizations/sankeyNetwork.png" alt = "Sankey Diagram" style = "width:100%; height:auto">
+                <img src = "assets/Thumbnails/workout viz.png" alt = "Sankey Diagram" style = "width:100%; height:auto">
                 <div class = "caption">
                   <p class="project-name">Exercise Visualizations</p>
                   <p class="project-type">Data Visualization</p>
