Removed css from images in index.html

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <div class = "col-md-6 col-sm-12 ">
             <div class = "thumbnail project-card mx-auto">
               <a href = "projects/3D_Emergency.html">
-                <img src = "assets/Centered Logo.png" alt = "3D Emergency" style = "width:100%; height:auto">
+                <img src = "assets/Centered Logo.png" alt = "3D Emergency" class = "project-image">
                 <div class = "caption">
                   <p class="project-name">3D Emergency</p>
                   <p class="project-type">UX Design</p>
@@ -72,7 +72,7 @@
           <div class = "col-md-6 col-sm-12">
             <div class = "thumbnail project-card mx-auto">
               <a href = "projects/MSGC_Consulting.html">
-                <img src = "assets/Thumbnails/MSGC.jpg" alt = "MSGC Consulting" style = "width:100%; height:auto">
+                <img src = "assets/Thumbnails/MSGC.jpg" alt = "MSGC Consulting" class = "project-image">
                 <div class = "caption">
                   <p class="project-name">Consulting with the MSGC</p>
                   <p class="project-type">User Research</p>
@@ -87,7 +87,7 @@
           <div class = "col-md-6 col-sm-12">
             <div class = "thumbnail project-card mx-auto">
               <a href = "projects/Exercise_Visualizations.html">
-                <img src = "assets/Thumbnails/workout viz.png" alt = "Sankey Diagram" style = "width:100%; height:auto">
+                <img src = "assets/Thumbnails/workout viz.png" alt = "Sankey Diagram" class = "project-image">
                 <div class = "caption">
                   <p class="project-name">Exercise Visualizations</p>
                   <p class="project-type">Data Visualization</p>
