Changing home page to three-column layout

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
       <div class = "container">
         <div class = "row">
-          <div class = "col-md-6 col-sm-12 ">
+          <div class = "col-lg-4 col-md-6 col-sm-12 ">
             <div class = "thumbnail project-card mx-auto">
               <a href = "projects/3D_Emergency.html">
                 <img src = "assets/Thumbnails/3DE grey-8.png" alt = "3D Emergency" class = "project-image">
@@ -69,7 +69,7 @@
               </a>
             </div>
           </div>
-          <div class = "col-md-6 col-sm-12">
+          <div class = "col-lg-4 col-md-6 col-sm-12">
             <div class = "thumbnail project-card mx-auto">
               <a href = "projects/MSGC_Consulting.html">
                 <img src = "assets/Thumbnails/MSGC.jpg" alt = "MSGC Consulting" class = "project-image">
@@ -80,11 +80,7 @@
               </a>
             </div>
           </div>
-        </div>
-      </div>
-      <div class="container">
-        <div class="row">
-          <div class = "col-md-6 col-sm-12">
+          <div class = "col-lg-4 col-md-6 col-sm-12">
             <div class = "thumbnail project-card mx-auto">
               <a href = "projects/Exercise_Visualizations.html">
                 <img src = "assets/Thumbnails/workout viz.png" alt = "Sankey Diagram" class = "project-image">
@@ -97,6 +93,7 @@
           </div>
         </div>
       </div>
+  
     </main>
 
     <footer>
