Added cards to visualization project

--- a/projects/Exercise_Visualizations.html
+++ b/projects/Exercise_Visualizations.html
@@ -63,17 +63,36 @@
 
       <div class="row">
         <div class="col-sm-12">
-          <h4>The Visualizations</h4>
-          <p>I've been using the same app to track my strength training workouts for almost two years, but I realized it lets me export my data to a .csv file! I thought I'd try using R to visualize some trends in my workouts, and to help keep me motivated and pushing for progress each month.<br><br>
-          Check out the code <a href="https://github.com/jbhammon/Workout-Visualizations">here</a> on Github.<br><br>
-          I just started a new benching routine, so I thought that data would be a good place to start practicing with the ggplot() function. It's a three day per week routine, and I do fewer reps with higher weight as the week goes on. First it's sets at 70% of my "one-rep max" on Monday, then 75% on Wednesday, and 80% on Fridays.
-          </p>
-          <img src="../assets/Exercise Visualizations/Benching Line Graphs.png" style="width:100%; height:auto">
-          <p>
-            Right now it's hard to tell if there is an upward trend with all the plotted lines. Next up I'll examine plotting them all separately and including some markers for where I bumped my "one-rep max" to help make sense of all the dips in this plot.<br><br>
-            I'm also making some Sankey diagrams to visualize how much weight I'm lifting with each area of my body. Here's the progress I've made so far (interactive version <a href="SankeyDiagram.html">here</a>):
-          </p>
-          <img src="../assets/Exercise Visualizations/sankeyNetwork.png" style="width:100%; height:auto">
+          <h4>Benching Progress</h4>
+        </div>
+      </div>
+      <div class="project-page-card">
+        <div class="row">
+          <div class="col-sm-12">
+            <p>I've been using the same app to track my strength training workouts for almost two years, but I realized it lets me export my data to a .csv file! I thought I'd try using R to visualize some trends in my workouts, and to help keep me motivated and pushing for progress each month.<br><br>
+            Check out the code <a href="https://github.com/jbhammon/Workout-Visualizations">here</a> on Github.<br><br>
+            I just started a new benching routine, so I thought that data would be a good place to start practicing with the ggplot() function. It's a three day per week routine, and I do fewer reps with higher weight as the week goes on. First it's sets at 70% of my "one-rep max" on Monday, then 75% on Wednesday, and 80% on Fridays.
+            </p>
+            <img src="../assets/Exercise Visualizations/Benching Line Graphs.png" style="width:100%; height:auto">
+            <p>
+              Right now it's hard to tell if there is an upward trend with all the plotted lines. Next up I'll examine plotting them all separately and including some markers for where I bumped my "one-rep max" to help make sense of all the dips in this plot.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-12">
+          <h4>Sankey Diagrams</h4>
+        </div>
+      </div>
+      <div class="project-page-card">
+        <div class="row">
+          <div class="col-sm-12">
+            <p>I'm also making some Sankey diagrams to visualize how much weight I'm lifting with each area of my body. Here's the progress I've made so far (interactive version <a href="SankeyDiagram.html">here</a>):
+            </p>
+            <img src="../assets/Exercise Visualizations/sankeyNetwork.png" style="width:100%; height:auto">
+          </div>
         </div>
       </div>
 
