Added cards to MSGC project page

--- a/projects/MSGC_Consulting.html
+++ b/projects/MSGC_Consulting.html
@@ -62,42 +62,67 @@
     <div class="container">
 
       <div class="row">
-        <h4>Our Team's Approach</h4>
-        <p>
-          The <a href="https://mi.spacegrant.org/">Michigan Space Grant Consortium (MSGC)</a> is part of a nationwide network of academics who help distribute funding from NASA to undergraduate and graduate students, as well as new faculty members just starting their own research.
-          <br>
-          Our project group partnered with them to create recommendations to improve the program. MSGC leadership included a mention of our project team in their recent report to NASA, and is eagerly waiting to hear our proposals and report them to NASA as well.
-          <br>
-          So far we've interviewed many people involved with the application process, including faculty mentors at Michigan universities, campus MSGC representatives, and student award winners from the University of Michigan.
-        </p>
+        <div class="col-sm-12">
+          <h4>Our Team's Approach</h4>
+        </div>
       </div>
-
-      <div class="row">
-        <h4>Our Analysis</h4>
-        <p>Using all the qualitative data we gathered from our interview notes and recordings we created an Affinity Wall to start finding connections. By grouping similar statements and ideas across different interviews we identified three main conclusions as a starting point for our recommendations.</p>
-      </div>
-
-      <div class="row">
-        <div class="col-lg-4 col-sm-12">
-          <img src="../assets/MSGC Consulting/Creating 1.jpg" style="width:100%; height:auto">
-        </div>
-        <div class="col-lg-4 col-sm-12">
-          <img src="../assets/MSGC Consulting/Creating 2.jpg" style="width:100%; height:auto">
-        </div>
-        <div class="col-lg-4 col-sm-12">
-          <img src="../assets/MSGC Consulting/Creating 3.jpg" style="width:100%; height:auto">
-        </div>
-        <div class="col-lg-4 col-sm-12">
-          <img src="../assets/MSGC Consulting/Creating 4.jpg" style="width:100%; height:auto">
-        </div>
-        <div class="col-lg-4 col-sm-12">
-          <img src="../assets/MSGC Consulting/Creating 5.jpg" style="width:100%; height:auto">
+      <div class="project-page-card">
+        <div class="row">
+          <div class="col-sm-12">
+            <p>
+              The <a href="https://mi.spacegrant.org/">Michigan Space Grant Consortium (MSGC)</a> is part of a nationwide network of academics who help distribute funding from NASA to undergraduate and graduate students, as well as new faculty members just starting their own research.
+              <br>
+              Our project group partnered with them to create recommendations to improve the program. MSGC leadership included a mention of our project team in their recent report to NASA, and is eagerly waiting to hear our proposals and report them to NASA as well.
+              <br>
+              So far we've interviewed many people involved with the application process, including faculty mentors at Michigan universities, campus MSGC representatives, and student award winners from the University of Michigan.
+            </p>
+          </div>
         </div>
       </div>
 
       <div class="row">
-        <h4>Conclusions</h4>
-        <p>We wrote up a final report summarizing our methods and findings from the semester. Due to confidentiality concerns details of our recommendations for their stated problem can't but included here, but please reach out if you'd like to learn more about the details of our analysis.</p>
+        <div class="col-sm-12">
+          <h4>Our Analysis</h4>
+        </div>
+      </div>
+      <div class="project-page-card">
+        <div class="row">
+          <div class="col-sm-12">
+            <p>Using all the qualitative data we gathered from our interview notes and recordings we created an Affinity Wall to start finding connections. By grouping similar statements and ideas across different interviews we identified three main conclusions as a starting point for our recommendations.</p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-4 col-sm-12">
+            <img src="../assets/MSGC Consulting/Creating 1.jpg" style="width:100%; height:auto">
+          </div>
+          <div class="col-lg-4 col-sm-12">
+            <img src="../assets/MSGC Consulting/Creating 2.jpg" style="width:100%; height:auto">
+          </div>
+          <div class="col-lg-4 col-sm-12">
+            <img src="../assets/MSGC Consulting/Creating 3.jpg" style="width:100%; height:auto">
+          </div>
+          <div class="col-lg-4 col-sm-12">
+            <img src="../assets/MSGC Consulting/Creating 4.jpg" style="width:100%; height:auto">
+          </div>
+          <div class="col-lg-4 col-sm-12">
+            <img src="../assets/MSGC Consulting/Creating 5.jpg" style="width:100%; height:auto">
+          </div>
+        </div>
+
+      </div>
+
+      <div class="row">
+        <div class="col-sm-12">
+          <h4>Conclusions</h4>
+        </div>
+      </div>
+      <div class="project-page-card">
+        <div class="row">
+          <div class="col-sm-12">
+            <p>We wrote up a final report summarizing our methods and findings from the semester. Due to confidentiality concerns details of our recommendations for their stated problem can't but included here, but please reach out if you'd like to learn more about the details of our analysis.</p>
+          </div>
+        </div>
       </div>
 
     </div>
