Touching up jumbotron on 3DE page

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class = "row">
           <div class = "col-sm-12">
             <!--- TO DO center this text top-to-bottom and left-to-right --->
-            <h3>I'm <strong>Jackson Hammond</strong>, UX Designer and lover of data</h3>
+            <h3>I'm <b>Jackson Hammond</b>, UX Designer and lover of data</h3>
           </div>
         </div>
       </div>
