--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class = "row">
           <div class = "col-lg-4 col-md-6 col-sm-12 ">
             <div class = "thumbnail project-card mx-auto">
-              <a href = "projects/3D_Emergency.html project-link">
+              <a href = "projects/3D_Emergency.html">
                 <img src = "assets/Thumbnails/3DE grey-8.png" alt = "3D Emergency" class = "project-image">
                 <div class = "caption">
                   <p class="project-name">3D Emergency</p>
