Updated the copy, added new screenshot, still linking to most recent diagram file

--- a/projects/Exercise_Visualizations.html
+++ b/projects/Exercise_Visualizations.html
@@ -89,9 +89,13 @@
       <div class="project-page-card">
         <div class="row">
           <div class="col-sm-12">
-            <p>I'm also making some Sankey diagrams to visualize how much weight I'm lifting with each area of my body. Here's the progress I've made so far (interactive version <a href="SankeyDiagram.html">here</a>):
+            <p>I'm also making some Sankey diagrams to visualize how much weight I'm lifting with each area of my body. Here's the first proof-of-concept version I created:
             </p>
             <img src="../assets/Exercise Visualizations/sankeyNetwork.png" style="width:100%; height:auto">
+            <p>This is the diagram with all the data included (interactive version <a href="SankeyDiagram.html">here</a>):
+            </p>
+            <img src="../assets/Exercise Visualizations/sankeyNetwork v2.png" style="width:100%; height:auto">
+            <p>It's a cool diagram, but not very pretty! Next steps are to see what control I have over fonts, colors, etc. being used to present the information more clearly.</p>
           </div>
         </div>
       </div>
