--- a/projects/3D_Emergency.html
+++ b/projects/3D_Emergency.html
@@ -83,7 +83,7 @@
 
         <div class="row">
           <div class="col-sm-12">
-            <h4>QUICK SUMMARY</h4>
+            <h4 class="project-section-header">QUICK SUMMARY</h4>
           </div>
         </div>
         <div class="project-page-card">
@@ -101,7 +101,7 @@
 
         <div class="row">
           <div class="col-sm-12">
-            <h4>THE NEW TOOLS</h4>
+            <h4 class="project-section-header">THE NEW TOOLS</h4>
           </div>
         </div>
 
@@ -123,7 +123,7 @@
 
           <div class="row">
             <div class="container">
-              <h5>Floorplan visualization</h5>
+              <h5>Floorplan Visualization</h5>
             </div>
           </div>
           <div class="container">
@@ -143,7 +143,7 @@
 
         <div class="row">
           <div class="col-sm-12">
-            <h4>RESEARCH AND DESIGN PROCESS</h4>
+            <h4 class="project-section-header">RESEARCH AND DESIGN PROCESS</h4>
           </div>
         </div>
 
@@ -240,7 +240,7 @@
 
         <div class="row">
           <div class="col-sm-12">
-            <h4>PROTOTYPES AND DEMOS</h4>
+            <h4 class="project-section-header">PROTOTYPES AND DEMOS</h4>
           </div>
         </div>
         <div class="project-page-card">
@@ -258,7 +258,7 @@
 
         <div class="row">
           <div class="col-sm-12">
-            <h4>REFLECTION</h4>
+            <h4 class="project-section-header">REFLECTION</h4>
           </div>
         </div>
         <div class="project-page-card">
