--- a/projects/3D_Emergency.html
+++ b/projects/3D_Emergency.html
@@ -22,7 +22,7 @@
 
   <body>
 
-    <nav class="navbar navbar-expand-md fixed-top">
+    <nav class="navbar navbar-expand-md my-sticky-nav">
       <div class = "container">
         <a class="navbar-brand" href="../index.html">Jackson Hammond</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
@@ -62,6 +62,18 @@
        </div>
 
       <!---Actual content about the project --->
+      <div class="sticky-project-nav">
+        <table class="project-section-navigation">
+          <tr>
+            <td class="project-section-navigation-cell">QUICK SUMMARY</td>
+            <td class="project-section-navigation-cell">THE NEW TOOLS</td>
+            <td class="project-section-navigation-cell">RESEARCH & DESIGN PROCESS</td>
+            <td class="project-section-navigation-cell">PROTOTYPES & DEMOS</td>
+            <td class="project-section-navigation-cell">REFLECTIONS</td>
+          </tr>
+        </table>
+      </div>
+
       <div class="container">
 
         <div class="project-page-card">
@@ -143,7 +155,7 @@
 
         <div class="row">
           <div class="col-sm-12">
-            <h4 class="project-section-header">RESEARCH AND DESIGN PROCESS</h4>
+            <h4 class="project-section-header">RESEARCH & DESIGN PROCESS</h4>
           </div>
         </div>
 
@@ -240,7 +252,7 @@
 
         <div class="row">
           <div class="col-sm-12">
-            <h4 class="project-section-header">PROTOTYPES AND DEMOS</h4>
+            <h4 class="project-section-header">PROTOTYPES & DEMOS</h4>
           </div>
         </div>
         <div class="project-page-card">
