Added links in second sticky navbar

--- a/projects/3D_Emergency.html
+++ b/projects/3D_Emergency.html
@@ -65,11 +65,11 @@
       <div class="sticky-project-nav">
         <table class="project-section-navigation">
           <tr>
-            <td class="project-section-navigation-cell">QUICK SUMMARY</td>
-            <td class="project-section-navigation-cell">THE NEW TOOLS</td>
-            <td class="project-section-navigation-cell">RESEARCH & DESIGN PROCESS</td>
-            <td class="project-section-navigation-cell">PROTOTYPES & DEMOS</td>
-            <td class="project-section-navigation-cell">REFLECTIONS</td>
+            <td class="project-section-navigation-cell"><a href="#quickSummary">QUICK SUMMARY</a></td>
+            <td class="project-section-navigation-cell"><a href="#newTools">THE NEW TOOLS</td>
+            <td class="project-section-navigation-cell"><a href="#researchDesignProcess">RESEARCH & DESIGN PROCESS</td>
+            <td class="project-section-navigation-cell"><a href="#prototypesDemos">PROTOTYPES & DEMOS</td>
+            <td class="project-section-navigation-cell"><a href="#reflections">REFLECTIONS</td>
           </tr>
         </table>
       </div>
@@ -95,7 +95,7 @@
 
         <div class="row">
           <div class="col-sm-12">
-            <h4 class="project-section-header">QUICK SUMMARY</h4>
+            <h4 class="project-section-header" id="quickSummary">QUICK SUMMARY</h4>
           </div>
         </div>
         <div class="project-page-card">
@@ -113,7 +113,7 @@
 
         <div class="row">
           <div class="col-sm-12">
-            <h4 class="project-section-header">THE NEW TOOLS</h4>
+            <h4 class="project-section-header" id="newTools">THE NEW TOOLS</h4>
           </div>
         </div>
 
@@ -155,7 +155,7 @@
 
         <div class="row">
           <div class="col-sm-12">
-            <h4 class="project-section-header">RESEARCH & DESIGN PROCESS</h4>
+            <h4 class="project-section-header" id="researchDesignProcess">RESEARCH & DESIGN PROCESS</h4>
           </div>
         </div>
 
@@ -252,7 +252,7 @@
 
         <div class="row">
           <div class="col-sm-12">
-            <h4 class="project-section-header">PROTOTYPES & DEMOS</h4>
+            <h4 class="project-section-header" id="prototypesDemos">PROTOTYPES & DEMOS</h4>
           </div>
         </div>
         <div class="project-page-card">
@@ -270,7 +270,7 @@
 
         <div class="row">
           <div class="col-sm-12">
-            <h4 class="project-section-header">REFLECTION</h4>
+            <h4 class="project-section-header" id="reflections">REFLECTION</h4>
           </div>
         </div>
         <div class="project-page-card">
