--- a/projects/3D_Emergency.html
+++ b/projects/3D_Emergency.html
@@ -54,22 +54,22 @@
             <p>A solo project focusing on interaction design as a method to improve calling 911 in the United States.</p>
           </div>
           <div class = "row d-flex justify-content-center text-center text-highlight">
-           <p><b>Role:</b> UX Designer and Researcher<br>
-           <b>Tools:</b> Adobe Illustrator and Adobe XD</p>
-         </div>
-         </div>
+            <p><b>Role:</b> UX Designer and Researcher<br>
+            <b>Tools:</b> Adobe Illustrator and Adobe XD</p>
+          </div>
         </div>
-       </div>
+      </div>
+
 
       <!---Actual content about the project --->
       <div class="sticky-project-nav">
         <table class="project-section-navigation">
           <tr>
             <td class="project-section-navigation-cell"><a href="#quickSummary">QUICK SUMMARY</a></td>
-            <td class="project-section-navigation-cell"><a href="#newTools">THE NEW TOOLS</td>
-            <td class="project-section-navigation-cell"><a href="#researchDesignProcess">RESEARCH & DESIGN PROCESS</td>
-            <td class="project-section-navigation-cell"><a href="#prototypesDemos">PROTOTYPES & DEMOS</td>
-            <td class="project-section-navigation-cell"><a href="#reflections">REFLECTIONS</td>
+            <td class="project-section-navigation-cell"><a href="#newTools">THE NEW TOOLS</a></td>
+            <td class="project-section-navigation-cell"><a href="#researchDesignProcess">RESEARCH & DESIGN PROCESS</a></td>
+            <td class="project-section-navigation-cell"><a href="#prototypesDemos">PROTOTYPES & DEMOS</a></td>
+            <td class="project-section-navigation-cell"><a href="#reflections">REFLECTIONS</a></td>
           </tr>
         </table>
       </div>
