--- a/projects/Exercise_Visualizations.html
+++ b/projects/Exercise_Visualizations.html
@@ -22,7 +22,7 @@
 
   <body>
 
-    <nav class="navbar navbar-expand-md fixed-top">
+    <nav class="navbar navbar-expand-md my-sticky-nav">
       <div class = "container">
         <a class="navbar-brand" href="../index.html">Jackson Hammond</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,25 +45,37 @@
     </nav>
 
     <main role="main">
-    <div class="jumbotron project-jumbotron">
-      <div class = "container">
-        <div class = "row">
-          <h3>Exercise Visualizations</h3>
-        </div>
-        <div class = "row">
-          <p>An individual project to practice some basic data visualization techniques.<br><br>
-          <b>Role:</b> Data Visualization Analyst<br>
-          <b>Tools:</b> R, RStudio</p>
+
+      <div class="jumbotron project-jumbotron d-flex align-items-center">
+        <div class = "container">
+          <div class = "row d-flex justify-content-center">
+            <h3>Exercise Visualizations</h3>
+          </div>
+          <div class = "row d-flex justify-content-center text-center">
+            <p>A solo project to practice some basic data visualization techniques.</p>
+          </div>
+          <div class = "row d-flex justify-content-center text-center text-highlight">
+            <p><b>Role:</b> Data Visualization Analyst<br>
+            <b>Tools:</b> R, RStudio</p>
+          </div>
         </div>
       </div>
-    </div>
 
     <!---Actual content about the project --->
+    <div class="sticky-project-nav">
+      <table class="project-section-navigation">
+        <tr>
+          <td class="project-section-navigation-cell"><a href="#benchProgrss">BENCHING PROGRESS</a></td>
+          <td class="project-section-navigation-cell"><a href="#sankeyDiagram">SANKEY DIAGRAMS</a></td>
+        </tr>
+      </table>
+    </div>
+
     <div class="container">
 
       <div class="row">
         <div class="col-sm-12">
-          <h4>Benching Progress</h4>
+          <h4 class="project-section-header" id="benchProgrss">Benching Progress</h4>
         </div>
       </div>
       <div class="project-page-card">
@@ -83,7 +95,7 @@
 
       <div class="row">
         <div class="col-sm-12">
-          <h4>Sankey Diagrams</h4>
+          <h4 class="project-section-header" id="sankeyDiagram">Sankey Diagrams</h4>
         </div>
       </div>
       <div class="project-page-card">
