Changing some col spacing on 3DE page

--- a/projects/3D_Emergency.html
+++ b/projects/3D_Emergency.html
@@ -119,16 +119,16 @@
 
         <div class="project-page-card">
           <div class="row">
-            <div class="container">
+            <div class="col-sm-6">
               <h5>QR Code Integration</h5>
             </div>
           </div>
           <div class="row">
-            <div class="col-sm-6">
-              <img src="../assets/3D Emergency/QR Code Scan.gif" style="width:50%">
+            <div class="col-lg-4 col-md-6">
+              <img src="../assets/3D Emergency/QR Code Scan.gif" style="width:75%">
               <p>Scanning QR code mid-call</p>
             </div>
-            <div class="col-sm-6">
+            <div class="col-lg-8 col-md-6">
               <p>Callers would be able to use the camera built into their smartphone to scan emergency QR code posters that are in the room with them. The location information that's encoded in them would be pulled out and displayed for them to communicate to the 911 dispatcher they're speaking with.</p>
             </div>
           </div>
