Added the animated line graph

--- a/projects/Exercise_Visualizations.html
+++ b/projects/Exercise_Visualizations.html
@@ -87,8 +87,10 @@
             </p>
             <img src="../assets/Exercise Visualizations/Benching Line Graphs.png" style="width:100%; height:auto">
             <p>
-              Right now it's hard to tell if there is an upward trend with all the plotted lines. Next up I'll examine plotting them all separately and including some markers for where I bumped my "one-rep max" to help make sense of all the dips in this plot.
+              Right now it seems like each line is trending positively. Progress! Next up I'll examine plotting them all separately and including some markers for where I bumped my "one-rep max" to help make sense of all the dips in this plot.<br>
+              In order to make the data a little more interesting I start experimenting with animating the visualization. Using the data I aggregated with RStudio I created a graph in Illustrator, and then animated it in After Effects.
             </p>
+            <img src="../assets/Exercise Visualizations/Benching Graphs.gif" style="width:100%; height:auto">
           </div>
         </div>
       </div>
