--- a/projects/Exercise_Visualizations.html
+++ b/projects/Exercise_Visualizations.html
@@ -56,7 +56,7 @@
           </div>
           <div class = "row d-flex justify-content-center text-center text-highlight">
             <p><b>Role:</b> Data Visualization Analyst<br>
-            <b>Tools:</b> R, RStudio</p>
+            <b>Tools:</b> R, RStudio, Adobe Illustrator, Adobe After Effects</p>
           </div>
         </div>
       </div>
