--- a/projects/3D_Emergency.html
+++ b/projects/3D_Emergency.html
@@ -296,7 +296,7 @@
           <a href="https://medium.com/@malts18" class="fa fa-medium"></a>
           <a href="https://www.linkedin.com/in/jackson-hammond-b428a481/" class="fa fa-linkedin"></a>
         </div>
-        <small class="footer-copyright">Tied together with Bootstrap 4 &#169; 2019 Jackson Hammond</small>
+        <small class="footer-copyright">Pulled up with Bootstrap 4 &#169; 2019 Jackson Hammond</small>
       </div>
     </footer>
 
