--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+
 
     <link rel = "stylesheet" type = "text/css" href = "main.css">
     <link href="https://fonts.googleapis.com/css?family=Sarabun" rel="stylesheet">
@@ -16,7 +14,6 @@
     <!-- Add icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--- testing --->
-
 
     <title>Jackson Hammond</title>
   </head>
@@ -47,11 +44,9 @@
     <main role="main">
       <div class = "jumbotron jumbotron-fluid d-flex align-items-center" id = "mainJumbotron">
         <div class = "container">
-          <div class = "row">
-            <div class = "col-sm-12">
-              <h3>I'm <b>Jackson Hammond</b>, UX Designer and lover of data</h3>
-            </div>
-          </div>
+          <h1 id='heroTextFirst'>Hi there!</h1>
+          <h1 id='heroTextSecond'>I'm <span class="test" id="animate">Jackson Hammond<span id="heroUnderline"></span></span>,</h1>
+          <h1 id='heroTextThird'>product designer and lover of data.</h1>
         </div>
       </div>
 
@@ -108,6 +103,12 @@
         <small class="footer-copyright">Pulled up with Bootstrap 4 &#169; 2019 Jackson Hammond</small>
       </div>
     </footer>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <!--- My JavaScript --->
+    <script src="myscripts.js"></script>
 
   </body>
 </html>
