--- a/projects/GLLDesignJam.html
+++ b/projects/GLLDesignJam.html
@@ -65,13 +65,75 @@
     <div class="sticky-project-nav">
       <table class="project-section-navigation">
         <tr>
-          <td class="project-section-navigation-cell"><a href="#tag">TAG </a></td>
+          <td class="project-section-navigation-cell"><a href="#summary">SUMMARY</a></td>
+          <td class="project-section-navigation-cell"><a href="#finalPrototype">FINAL PROTOTYPE</a></td>
+          <td class="project-section-navigation-cell"><a href="#designProcess">DESIGN PROCESS</a></td>
+          <td class="project-section-navigation-cell"><a href="#reflection">REFLECTION</a></td>
         </tr>
       </table>
     </div>
 
     <div class="container">
 
+      <div class="row">
+        <div class="col-sm-12">
+          <h4 class="project-section-header" id="summary">SUMMARY</h4>
+        </div>
+      </div>
+      <div class="project-page-card">
+        <div class="row">
+          <div class="col-sm-12">
+            <p>
+              Copy to come.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-12">
+          <h4 class="project-section-header" id="finalPrototype">FINAL PROTOTYPE</h4>
+        </div>
+      </div>
+      <div class="project-page-card">
+        <div class="row">
+          <div class="col-sm-12">
+            <p>
+              Copy to come.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-12">
+          <h4 class="project-section-header" id="designProcess">DESIGN PROCESS</h4>
+        </div>
+      </div>
+      <div class="project-page-card">
+        <div class="row">
+          <div class="col-sm-12">
+            <p>
+              Copy to come.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-12">
+          <h4 class="project-section-header" id="reflection">REFLECTION</h4>
+        </div>
+      </div>
+      <div class="project-page-card">
+        <div class="row">
+          <div class="col-sm-12">
+            <p>
+              Copy to come.
+            </p>
+          </div>
+        </div>
+      </div>
 
     </div>
     </main>
