Added a link to GLL project to home page

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
           </div>
           <div class = "col-lg-4 col-md-6 col-sm-12">
             <div class = "thumbnail project-card mx-auto">
-              <a href = "projects/MSGC_Consulting.html">
-                <img src = "assets/Thumbnails/MSGC.jpg" alt = "MSGC Consulting" class = "project-image">
+              <a href = "projects/Great_Lakes_Legends.html">
+                <img src = "assets/Thumbnails/great lakes legends.jpg" alt = "Great Lakes Legends" class = "project-image">
                 <div class = "caption">
-                  <p class="project-name">Consulting with the MSGC</p>
-                  <p class="project-type">User Research</p>
+                  <p class="project-name">Great Lakes Legends</p>
+                  <p class="project-type">Product Design</p>
                 </div>
               </a>
             </div>
@@ -82,6 +82,17 @@
                 <div class = "caption">
                   <p class="project-name">Exercise Visualizations</p>
                   <p class="project-type">Data Visualization</p>
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class = "col-lg-4 col-md-6 col-sm-12">
+            <div class = "thumbnail project-card mx-auto">
+              <a href = "projects/MSGC_Consulting.html">
+                <img src = "assets/Thumbnails/MSGC.jpg" alt = "MSGC Consulting" class = "project-image">
+                <div class = "caption">
+                  <p class="project-name">Consulting with the MSGC</p>
+                  <p class="project-type">User Research</p>
                 </div>
               </a>
             </div>
