--- a/index.html
+++ b/index.html
@@ -30,16 +30,18 @@
   </head>
   <body>
 
-    <nav class="navbar navbar-expand-md fixed-top">
+    <nav class="navbar navbar-expand-sm fixed-top navbar-light navbar-custom">
       <div class = "container">
-        <a class="navbar-brand" href="#">Jackson Hammond</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarUniq" aria-controls="navbarUniq" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div id="navbar" class="collapse navbar-collapse">
+        <a class="navbar-brand" href="#">Jackson Hammond</a>
+
+        <div id="navbarUniq" class="collapse navbar-collapse">
           <ul class="nav navbar-nav ml-auto" >
             <li class="nav-item">
-              <a class="nav-link current-link" href="index.html">WORK</a>
+              <a class="nav-link" href="index.html">WORK</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="About.html">ABOUT</a>
