--- a/projects/MSGC_Consulting.html
+++ b/projects/MSGC_Consulting.html
@@ -33,14 +33,16 @@
 
   <body>
 
-    <nav class="navbar navbar-expand-md my-sticky-nav">
+    <nav class="navbar navbar-expand-sm fixed-top navbar-light navbar-custom">
       <div class = "container">
-        <a class="navbar-brand" href="../index.html">Jackson Hammond</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarUniq" aria-controls="navbarUniq" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav ml-auto" id="homeNavLinks">
+        <a class="navbar-brand" href="../index.html">Jackson Hammond</a>
+
+        <div id="navbarUniq" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav ml-auto" >
             <li class="nav-item">
               <a class="nav-link" href="../index.html">WORK</a>
             </li>
