--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
     <link rel = "stylesheet" type = "text/css" href = "main.css">
     <link href="https://fonts.googleapis.com/css?family=Sarabun" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Playfair+Display:500" rel="stylesheet">
 
     <!-- Add icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -58,7 +59,7 @@
       <div class = "jumbotron jumbotron-fluid d-flex align-items-center" id = "mainJumbotron">
         <div class = "container">
           <h1 id='heroTextFirst'>Hi there!</h1>
-          <h1 id='heroTextSecond'>I'm <span class="test" id="animate">Jackson Hammond<span id="heroUnderline"></span></span>,</h1>
+          <h1 id='heroTextSecond'>I'm <span class="underline--magical">Jackson Hammond</span>,</h1>
           <h1 id='heroTextThird'>product designer and lover of data.</h1>
         </div>
       </div>
