--- a/projects/Great_Lakes_Legends.html
+++ b/projects/Great_Lakes_Legends.html
@@ -197,7 +197,7 @@
 
     <footer>
       <div class="container">
-        <h5>Feel free to reach out if you want to connect or jusy say hi!</h5>
+        <h5>Feel free to reach out if you want to connect or just say hi!</h5>
         <a class="footer-email" href="mailto:jbhammon@umich.edu">jbhammon@umich.edu</a>
         <div class="social-links">
           <a href="https://github.com/jbhammon" class="fa fa-github"></a>
