--- a/projects/Great_Lakes_Legends.html
+++ b/projects/Great_Lakes_Legends.html
@@ -79,8 +79,8 @@
       <table class="project-section-navigation">
         <tr>
           <td class="project-section-navigation-cell"><a href="#summary">SUMMARY</a></td>
-          <td class="project-section-navigation-cell"><a href="#finalPrototype">DESIGN PROCESS</a></td>
-          <td class="project-section-navigation-cell"><a href="#designProcess">FINAL PROTOTYPE</a></td>
+          <td class="project-section-navigation-cell"><a href="#designProcess">DESIGN PROCESS</a></td>
+          <td class="project-section-navigation-cell"><a href="#finalPrototype">FINAL PROTOTYPE</a></td>
           <td class="project-section-navigation-cell"><a href="#reflection">REFLECTION</a></td>
         </tr>
       </table>
